<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        android:elevation="0dp"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/txt_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/img_profile"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:background="@color/transparent"
            android:contentDescription="@string/timeline_profile_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="@+id/img_profile"
            tools:text="Matheus Ribeiro Miranda" />

        <TextView
            android:id="@+id/txt_social_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:text="\@matheusribeiro" />

        <TextView
            android:id="@+id/txt_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallxx"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_social_name"
            tools:text="Joined in 01/02/2022" />

        <TextView
            android:id="@+id/txt_post_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_repost_count"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            tools:text="Posts: 10" />

        <TextView
            android:id="@+id/txt_repost_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_quote_count"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_post_count"
            app:layout_constraintTop_toTopOf="@+id/txt_post_count"
            tools:text="Reposts: 10" />

        <TextView
            android:id="@+id/txt_quote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_repost_count"
            app:layout_constraintTop_toTopOf="@+id/txt_post_count"
            tools:text="Quotes: 10" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/mdr_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/profile_posts"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <ImageButton
        android:id="@+id/img_add"
        android:layout_width="@dimen/icon_size_smallx"
        android:layout_height="@dimen/icon_size_smallx"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@color/transparent"
        android:contentDescription="@string/timeline_profile_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_posts" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swp_fetch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_posts">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_timeline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/recyclerview_cell_timeline_post" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>